--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <button><img src="images/search.png" /></button>
       <!-- Menú desplegable con las opciones de búsqueda -->
       <select id="opcionBusqueda">
-        <option value="nombre">Nombre de plato</option>
-        <option value="categoria">Categoría</option>
-        <option value="ingrediente">Ingrediente principal</option>
-        <option value="area">Área</option>
+        <option value="nombre">Name of the dish</option>
+        <option value="categoria">Category</option>
+        <option value="ingrediente">Principal ingredient</option>
+        <option value="area">Area</option>
       </select>
     </div>
       <!-- Contenedor de los resultados de la búsqueda -->
